# vision-workbench

./: .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  NOTICE  README.en.md  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-classification.txt  requirements-dev.txt  requirements-yolo26.txt  requirements.txt  二次开发与打包指南.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: README.md  adding_custom_features_README.md  adding_custom_features_README.zh-CN.md  ci-troubleshooting.md  legacy-gui-policy.md  qa-checklist.en.md  qa-checklist.md  二次开发指南.md  旧版界面维护策略.md
docs/legal/: release_policy.md  release_policy.zh-CN.md  发布策略.md
docs/modules/en/: camera_diagnostics_README.md  cv_basics_README.md  image_classification_README.md  panorama_reconstruction_README.md  trained_model_loading_and_api_README.md  yolo26_detection_README.md  yolo26_segmentation_README.md  yolo26_training_README.md
docs/modules/zh-CN/: YOLO26分割.md  YOLO26目标检测.md  YOLO26训练.md  camera_diagnostics_README.zh-CN.md  cv_basics_README.zh-CN.md  image_classification_README.zh-CN.md  panorama_reconstruction_README.zh-CN.md  yolo26_detection_README.zh-CN.md  yolo26_segmentation_README.zh-CN.md  yolo26_training_README.zh-CN.md  全景重构.md  图像分类.md  基础CV.md  相机诊断.md  训练后模型加载与接口说明.md
docs/troubleshooting/: README.md
docs/troubleshooting/en/: README.md  camera-and-video.md  data-and-files.md  datasets-and-training.md  deep-learning-dependencies.md  emergency-cleanup.md  environment.md  models-and-weights.md  module-runtime-errors.md  packaging-and-release.md
docs/troubleshooting/zh-CN/: README.zh-CN.md  camera-and-video.zh-CN.md  data-and-files.zh-CN.md  datasets-and-training.zh-CN.md  deep-learning-dependencies.zh-CN.md  emergency-cleanup.zh-CN.md  environment.zh-CN.md  models-and-weights.zh-CN.md  module-runtime-errors.zh-CN.md  packaging-and-release.zh-CN.md  应急清理.md  打包与发布.md  摄像头与视频.md  数据与文件.md  数据集与训练.md  模块运行错误.md  模型与权重.md  深度学习依赖.md  环境问题.md  问题排查指南.md
scripts/: build_windows_base_exe.py  check_markdown_links.py  check_release_assets.py  check_version_contract.py  cleanup_runtime.py  create_sample_datasets.py  generate_update_manifest.py  install_dependencies.py  windows_base_exe.py
src/camera_diagnostics/: __init__.py
src/camera_diagnostics/api/: __init__.py  facade.py
src/camera_diagnostics/application/: __init__.py  camera_service.py
src/camera_diagnostics/configuration/: __init__.py  settings.py
src/camera_diagnostics/domain/: __init__.py  models.py
src/camera_diagnostics/infrastructure/: __init__.py  camera_repository.py  image_utils.py  platform_detector.py
src/camera_diagnostics/window/: __init__.py  app.py  presenter.py
src/cv_basics/: __init__.py
src/cv_basics/api/: __init__.py  facade.py
src/cv_basics/application/: __init__.py  image_processing_service.py
src/cv_basics/configuration/: __init__.py  settings.py
src/cv_basics/domain/: __init__.py  models.py
src/cv_basics/infrastructure/: __init__.py  image_repository.py  image_utils.py
src/cv_basics/ports/: __init__.py  protocols.py
src/cv_basics/processing/: __init__.py  operations.py
src/cv_basics/window/: __init__.py  app.py  presenter.py  process_exit.py  task_runner.py
src/image_classification/: __init__.py  runner.py  train.py
src/image_classification/api/: __init__.py  facade.py
src/image_classification/application/: __init__.py  classification_service.py
src/image_classification/configuration/: __init__.py  settings.py
src/image_classification/domain/: __init__.py  models.py
src/image_classification/infrastructure/: __init__.py  dataset_splitter.py  dataset_validator.py  model_repository.py  pretrained_weights.py
src/image_classification/processing/: __init__.py  classifier_backend.py
src/image_classification/window/: __init__.py  app.py  presenter.py
src/panorama_reconstruction/: __init__.py
src/panorama_reconstruction/api/: __init__.py  facade.py
src/panorama_reconstruction/application/: __init__.py  reconstruction_service.py
src/panorama_reconstruction/configuration/: __init__.py  settings.py
src/panorama_reconstruction/domain/: __init__.py  models.py
src/panorama_reconstruction/infrastructure/: __init__.py  image_repository.py  image_utils.py
src/panorama_reconstruction/processing/: __init__.py  manual_reconstructor.py  sift_reconstructor.py
src/panorama_reconstruction/window/: __init__.py  app.py  presenter.py  task_runner.py
src/vision_workbench/: __init__.py  branding.py  input_limits.py  model_files.py  model_manifest.py  release_info.json  runtime_diagnostics.py  runtime_security.py  sample_data.py  self_test.py  troubleshooting.py  trusted_models.py  update_helper.py  update_installer.py  update_service.py  versioning.py
src/vision_workbench/desktop/: __init__.py  app.py  build_mode.py  camera_resource.py  image_presenter.py  main_window.py  task_runner.py  theme.py  widgets.py
src/yolo26_detection/: __init__.py
src/yolo26_detection/api/: __init__.py  facade.py
src/yolo26_detection/application/: __init__.py  detection_service.py
src/yolo26_detection/configuration/: __init__.py  settings.py
src/yolo26_detection/domain/: __init__.py  models.py
src/yolo26_detection/infrastructure/: __init__.py  camera_source.py  detector_backend.py  image_utils.py  model_registry.py  platform_detector.py
src/yolo26_detection/processing/: __init__.py  yolo26_detector.py
src/yolo26_detection/window/: __init__.py  app.py  presenter.py
src/yolo26_segmentation/: __init__.py
src/yolo26_training/: __init__.py  runner.py  train.py
tests/: test_api.py  test_camera_diagnostics.py  test_cleanup_runtime.py  test_image_classification.py  test_markdown_links.py  test_model_files.py  test_model_manifest.py  test_panorama_reconstruction_api.py  test_qt_app_entry.py  test_qt_ui.py  test_release_assets.py  test_runtime_security.py  test_samples_and_limits.py  test_troubleshooting.py  test_version_updates.py  test_yolo26_detection_api.py  test_yolo26_segmentation.py  test_yolo26_training.py
(+42 files in other folders)
