[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-workbench"
version = "0.3.0"
description = "An AGPL-licensed computer-vision learning workbench with traditional CV, panorama reconstruction, camera diagnostics, classification, YOLO26 detection, segmentation, and training workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Shuqi Ke" }
]
keywords = ["computer-vision", "opencv", "pyside6", "qt", "image-processing", "yolo", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.0.2,<3",
    "opencv-python-headless>=4.13.0.92,<5",
    "Pillow>=12.2.0,<13",
    "PySide6>=6.11.1,<7",
    "tomli>=2.4.1,<3; python_version < '3.11'",
]

[project.optional-dependencies]
classification = [
    "torch",
    "torchvision",
]
test = [
    "pytest>=9.0.3,<10",
]

[project.scripts]
yolo26-train = "yolo26_training.runner:main"
image-classification-train = "image_classification.runner:main"

[project.gui-scripts]
vision-workbench = "vision_workbench.desktop.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
panorama_reconstruction = ["assets/buildingImgs/*.png"]
vision_workbench = ["assets/*.png"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
