[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-workbench"
version = "1.0.2"
description = "An AGPL-licensed computer-vision learning workbench with traditional CV, panorama reconstruction, camera diagnostics, classification, YOLO26 detection, segmentation, and training workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Shuqi Ke" }
]
keywords = ["computer-vision", "opencv", "pyside6", "qt", "image-processing", "yolo", "education"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.0.2,<3",
    "opencv-python-headless>=4.13.0.92,<6",
    "Pillow>=12.3.0,<13",
    "PySide6>=6.11.1,<7",
    "tomli>=2.4.1,<3; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/ksukie/Vision-WorkBench"
Repository = "https://github.com/ksukie/Vision-WorkBench"
Documentation = "https://github.com/ksukie/Vision-WorkBench/tree/main/docs"
Issues = "https://github.com/ksukie/Vision-WorkBench/issues"
Changelog = "https://github.com/ksukie/Vision-WorkBench/blob/main/CHANGELOG.md"

[project.optional-dependencies]
classification = [
    "torch",
    "torchvision",
]
test = [
    "pytest>=9.0.3,<10",
]

[project.scripts]
yolo26-train = "yolo26_training.runner:main"
image-classification-train = "image_classification.runner:main"

[project.gui-scripts]
vision-workbench = "vision_workbench.desktop.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
panorama_reconstruction = ["assets/buildingImgs/*.png"]
vision_workbench = ["assets/*.png", "assets/*.ico", "release_info.json"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
